solving some issues

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -657,3 +657,11 @@
   Timestamp                = {2014.11.08}
 }
 
+@incollection{poggi2008linking,
+  title={{Linking data to ontologies}},
+  author={Poggi, Antonella and Lembo, Domenico and Calvanese, Diego and De Giacomo, Giuseppe and Lenzerini, Maurizio and Rosati, Riccardo},
+  booktitle={Journal on data semantics X},
+  pages={133--173},
+  year={2008},
+  publisher={Springer}
+}
