solving some issues

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -665,3 +665,9 @@
   year={2008},
   publisher={Springer}
 }
+@inproceedings{stuckenschmidt2008debugging,
+  title={Debugging OWL Ontologies-A Reality Check.},
+  author={Stuckenschmidt, Heiner},
+  booktitle={EON},
+  year={2008}
+}
