solving some issues

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -747,7 +747,7 @@ If we do reasoning by query rewriting in terms of backward chaining and if we ru
 \subsection{Expressible by OWL 2 QL}
 
 \textbf{Literal Pattern Matching}\footnote{corresponds to R-44-PATTERN-MATCHING-ON-RDF-LITERALS}\textbf{.} 
-\an{IMHO literal pattern matching is not expressible in DL!}\tb{but we can express it using OWL 2 DL as it is shown in the OWL 2 spec}
+\an{IMHO literal pattern matching is not expressible in DL and also not in OWL 2 QL!}
 There are multiple use cases associated with the requirement to match literals according to given patterns.
 
 %A social security number, for example, is a string that matches a given regular expression - which can be expressed by OWL 2 QL: 
