referencing the diss of tao

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -671,3 +671,9 @@
   booktitle={EON},
   year={2008}
 }
+@phdthesis{tao2012integrity,
+  title={Integrity Constraints for the Semantic Web: An OWL 2 DL Extension},
+  author={Tao, Jiao},
+  year={2012},
+  school={Rensselaer Polytechnic Institute}
+}
