--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -389,6 +389,12 @@ $Hologram \sqsubseteq \neg Human$
 $FederationCaptain \sqsubseteq Federation \sqcap \geq1 commandsVessel . Vessel $
 \end{DL}
 
+\section{Syntactic Sugar}
+
+\begin{itemize}
+	\item Exact Qualified Cardinality Restrictions on Properties
+\end{itemize}
+
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
 \setcounter{tocdepth}{1}
