--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -234,7 +234,7 @@ where first use cases have been presented and discussed.
 Two WGs, \er{WG? Working groups?} that follow up on this workshop and address RDF constraint formulation and validation, are established in 2014: 
 the W3C RDF Data Shapes WG\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles WG\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
 
-Bosch and Eckert \cite{BoschEckert2014} initiated a database on RDF validation requirements to collect case studies, use cases and especially requirements regarding RDF validation collaboratively and in a comprehensive and structured way. \er{Just for reminding ourselves:  being careful using what is a use-case and what is a case-study later in the text.}
+Bosch and Eckert \cite{BoschEckert2014} initiated a database on RDF validation requirements to collect case studies, use cases and especially requirements regarding RDF validation collaboratively and in a comprehensive and structured way. \er{Just for reminding ourselves:  being careful using what is a use-case and what is a case-study later in the text.(http://www.w3.org/2001/sw/sweo/public/UseCases/)}
 This database is continuously updated and openly available at \url{http://purl.org/net/rdf-validation}. It is used to evaluate and compare several existing solutions for RDF constraint formulation and validation. 
 The requirements are classified to provide a high-level view on different solutions and to facilitate a better understanding of the problem domain \cite{BoschEckert2014}.  
 
@@ -246,29 +246,26 @@ Shape Expressions (ShEx)\footnote{\url{http://www.w3.org/Submission/shex-primer/
 Resource Shapes (ReSh)\footnote{\url{http://www.w3.org/Submission/shapes/}}, 
 and Description Set Profiles (DSP)\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}}.
 However, there is no single standard all-purpose constraint language. \er{Notice that except expressivity, no purpose has been yet uttered.}
-The choice depends on the individual use case. \er{I think before that the importance of complexity and expressivity in practice of rdf-validation should be briefly told in one or few sentence(s), as well as a closing short paragraph telling the structure of the paper would be good.}
+The choice depends on the individual use case. \er{I think before that the importance of complexity and expressivity in practice of rdf-validation should be briefly told in one or few sentence(s), validators (if wanted), as well as a closing short paragraph telling the structure/organisation of the paper would be good. Let us keep in mind that the introduction covers and extends the abstract for integrity.}
 
 \section{Motivation}
 
-OWL is based on a knowledge representation formalism with different complexity, but is created as a language which can be seen as a constraint language.
-Validation does not appear to be part of the services provided by OWL.  
+The ontology web language (OWL) is an expressive semantic web language offering knowledge representation and reasoning services. Validation, however, does not appear to be a genuine part of it.  
 This has lead to claims that OWL cannot be used for validation. 
-There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}, \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL should be used for RDF validation.
-OWL is an instantiation of a high-level and very expressive constraint language with a compact human-readable syntax.
-In practice, many people know OWL very well and use RDFS/OWL constructs to tell people and applications about how valid instances should be created.
+There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL should be used for RDF validation.
+However, OWL is high-level  expressive  language with a compact human-readable syntax.
+In practice, OWL is well-spread and RDFS/OWL constructs is widely used to tell people and applications about how valid instances should be created.
 RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation.
 
-Despite the huge diversity to formulate constraints and validate them on RDF data, most of the constraint languages require the major shortcoming of redundancy. For illustration, consider e.g., the existential restriction \ms{Jedi $\sqsubseteq$ $\exists$ hasJediWaepon . JediWeapon} that stated that every Jedi has at least one Jedi weapon. Furthermore, we know that Luke is a Jedi (\ms{Jedi(Luke)}) having a blue laser sword (\ms{hasLaserSword(Luke, BlueLaserSword)}. Since all of the constraint languages are based on the closed-world assumption (CWA) and as long as it isn't explicitly defined that a blue laser sword is a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}), the existential restriction causes a constraint violation.
+Despite the huge diversity to formulate constraints and validate them on RDF data, most of the constraint languages require a major shortcoming of redundancy. For example, consider the statement with an existential restriction \ms{Jedi $\sqsubseteq \exists$}\ms{hasJediWaepon.JediWeapon}  that says every Jedi has at least one Jedi weapon. Furthermore, we know that Luke is a Jedi (i.e., \ms{Jedi(Luke)}) having a blue laser sword (\ms{hasLaserSword(Luke, BlueLaserSword)}. Since classical constraint languages are based on the closed-world assumption (CWA) \er{"All constraint languages" has been changed to "classical" because notice that if we call OWL   a constraint language, statement does not hold.}, if a blue laser sword is not explicitly defined to be a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}), the existential restriction causes a constraint violation.
 
-But if we express the mentioned constraints in OWL and apply a reasoner before the proper constraint validation is performed, we won't get a constraint violation because all implicit statements like a blue laser sword is a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}) will be inferred. At a first glance, using OWL as constraint language the shortcoming of redundancy is solved. However, on closer consideration OWL is by default an insufficient choice because OWL is in contrast based on the open-world assumption (OWA), i.e. a statement cannot be inferred to be false on the basis of failures to prove it. 
-This semantics is suitable for the distributed knowledge representation scenarios on the Semantic Web, 
-where usually the knowledge about the domain comes from distributed
-sources and a complete knowledge about the domain cannot be assumed, 
-but makes it difficult to use OWL for RDF validation.
-Additionally, in OWL we have the non-unique name assumption (nUNA) whereas RDF validation requires that different names represent different objects (also known as unique name assumption (UNA)).
-This ambiguousness in semantics is one of the main reasons why OWL has not been adopted as standard constraint language for RDF validation in the past. 
-
-Let us address these opposites via an example. Consider e.g., the following definition of the knowledge base $\mathcal{K}$:
+If we express the mentioned constraints in OWL \er{\tiny \vspace{0.1cm}  But we already did in former paragraph via DL not OWL which would also confuse the reader, we can instead reformulate it here for the first time in OWL or DL,  or in former paragraph in parentheses "in DL:"} and apply a reasoner before the proper constraint validation is performed, we will not get a constraint violation because implicit statements like a blue laser sword is a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}) will be inferred. This is due to OWL's semantic basis; open-world assumption (OWA)  i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem.  However, on closer consideration, for many constraints as well as RDF validation scenarios which demands CWA, it can result inconvenience. 
+%At a first glance, using OWL as a constraint language, the shortcoming of redundancy is solved. However, on closer consideration, OWL is by default an insufficient choice because OWL is in contrast based on the open-world assumption (OWA), i.e. a statement cannot be inferred to be false on the basis of failures to prove it. 
+%This semantics is suitable for the distributed knowledge representation scenarios on the Semantic Web, 
+%where usually the knowledge about the domain comes from distributed
+%sources and a complete knowledge about the domain cannot be assumed, 
+%but makes it difficult to use OWL for RDF validation.
+Additionally, in OWL we have the non-unique name assumption (nUNA) whereas RDF validation requires that different names represent different objects (also known as unique name assumption (UNA)). This ambiguity in semantics stands as a  one of the main reasons for it has not been adopted as a standard constraint language for RDF validation in the past.  Let us address these opposites via an example. Consider the following definition of the knowledge base $\mathcal{K}$: \er{Notice that all around we talk about OWL but use DL. A statement somewhere before like, "it is based on DL, we will show it on DL since it has the same semantics/clarity" would be good.}
 \begin{center}
 \begin{DL} 
 $\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasFather.Person}, \\
@@ -279,9 +276,9 @@ $\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasFather.Person}, \\
  &\ms{hasFather(Luke, Shmi)}$\}$
 \end{DL}
 \end{center}
-In case of the OWA, we infer that $\ms{Anakin}$ has a father that is a $\ms{Person}$, but we do not know him, so $\mathcal{K}$ is consistent. In CWA however, the constraint needs to be satisfied only by named individuals which yields in return of a constraint violation. We can further observe that there is a clash caused by the functional role $\ms{hasAncestor}$ and the UNA. However, in OWA there is no UNA by default, therefore the reasoning will conclude that $\ms{Anakin}$ is the same individual as \ms{Shmi} ($\ms{Anakin} \equiv \ms{Shmi}$). Notice that this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009} which is the basis for OWL 2 QL.
+In case of the OWA, we infer that $\ms{Anakin}$ has a father that is a $\ms{Person}$, but we do not know who exactly, and $\mathcal{K}$ is consistent. In CWA however, the constraint needs to be satisfied only by named individuals which yields in return of a constraint violation. We can further observe that there is a clash caused by the functional role $\ms{hasAncestor}$ and the UNA. However, in OWA there is no UNA by default, therefore the reasoning will conclude that $\ms{Anakin}$ is the same individual as \ms{Shmi} ($\ms{Anakin} \equiv \ms{Shmi}$). Notice that this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009} which is the basis for OWL 2 QL. \er{Notice that this is the second example already, talking again OWA CWA in detail. I think all section must be designed in a way to show UNA and OWA vs. CWA in one example. Flows better and gains space}
 
-If we follow the principle of adopting the UNA to OWL and performing contraint validation after some reasoning, the opposites of OWA in OWL and CWA in constraint validation doesn't affect each other, because missing assertions like in the example mentioned above will cause still some constraint violations but the implicit knowledge is even considered on constraint validation.
+ If we follow the principle of adopting the UNA to OWL and performing constraint validation after some reasoning, the opposites of OWA in OWL and CWA in constraint validation does not affect each other, because missing assertions like in the example mentioned above will cause still some constraint violations but the implicit knowledge is even considered on constraint validation. \er{I think that such detailed explanations or long sentences like this should not be in motivation section.}
 
 %The standard semantics of OWL is:
 %
@@ -377,7 +374,7 @@ When stating axioms and constraints (without reasoning capabilities) needed for 
 the validator is able to determine the expressivity class and thus can recommend constraint languages which can be used to express the wished axioms/constraints. 
 Although, there is a partial ordering of constraint languages for particular expressivity classes, 
 validators may not recommend the constraint language with the highest expressivity of that specific expressivity class.
-The validator compares the constraint languages, which are able to express the needed axioms/constraints, according to multiple user-friendliness classes.
+The validator compares the constraint languages, which are able to express the needed axioms/constraints, according to multiple user-friendliness classes. \er{I think that language is a bit verbose.}
 As a consequence, the validator may recommend to express the stated axioms/constraints by a constraint language which is less but enough expressive, and more user-friendly.
 
 %As case studies are linked to use cases and use cases to requirements, it is known how complex the task is to fulfill use cases and case studies.
@@ -422,7 +419,7 @@ The \textbf{main contributions} of this paper are:
 	%\item We show that OWL 2 QL together with additional constraint languages completely satisfy all RDF validation requirements.
 	%\item We evaluated to which extend the five possible standard constraint languages fulfill each requirement.
 \end{itemize}
-
+\er{I think after putting 2 pages of motivation, either we should get rid of this itemisation in terms of reshape or reorganise, or embed them inside flowing motivation text. They are so many. }
 \section{Expressivity and Complexity in OWL 2 Reasoning}
 
 \subsection{OWL 2 QL Reasoning}
