--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -223,6 +223,7 @@ If validators propose multiple constraint languages for a particular validation 
 	%\item RDF Validation - Classification of Constraint Languages According to Expressivity, Complexity, and User-Friendliness 
 	%\item RDF Validation - Effects on Complexity with and without OWL 2 Reasoning
 	% RDF Validation - Proposing / Comparing / Recommendation / Recommending Constraint Languages According to Expressivity, Complexity, and User-Friendliness
+	% Constraint Validation with OWL 2
 %\end{itemize}
 
 \section{Introduction}
