--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -196,7 +196,7 @@ We explain why OWL 2 reasoning is beneficial for validation and how reasoning in
 %(1) to infer triples resolving constraint violations, 
 %(2) to infer triples for which constraints can also be validated, and 
 %(3) to solve the major shortcoming of RDF validation: redundancy. 
-\er{I simplified the long abstract a bit by commenting (\%) as well as little editing. The part starting with, "we investigate", cause lacking integrity in abstract,  I dropped 1, 2, 3 for simplification and better flow. We can write abstract in the end, which can also include a short part of introduction if necessary.}
+%\er{I simplified the long abstract a bit by commenting (\%) as well as little editing. The part starting with, "we investigate", cause lacking integrity in abstract,  I dropped 1, 2, 3 for simplification and better flow. We can write abstract in the end, which can also include a short part of introduction if necessary.}
 We also attempt to classify the expressivity, the complexity, and the user-friendliness of constraint languages. 
 Following this approach, one can clarify which constraint language to use to express constraints for specific validation scenarios, with and without reasoning concerning the complexity as well as user-friendliness.
 %Validators can determine which axioms cause high complexity and which constraints can only be expressed within a more sophisticated expressivity class.
@@ -229,18 +229,21 @@ Following this approach, one can clarify which constraint language to use to exp
 
 \section{Introduction}
 
-For many RDF applications\er{Do we mean software applications (i.e., RDF-based applications) or application as a task?}, the formulation of constraints and the automatic validation of data according to these constraints is a much sought-after feature. 
+For many RDF applications\er{Do we mean software applications (i.e., RDF-based applications) or application as a task?}\tb{tasks not just RDF-based applications}, the formulation of constraints and the automatic validation of data according to these constraints is a much sought-after feature. 
 In 2013, the W3C invited experts from industry, government, and academia to the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
 where first use cases have been presented and discussed. 
-Two WGs, \er{WG? Working groups?} that follow up on this workshop and address RDF constraint formulation and validation, are established in 2014: 
+Two WGs, \er{WG? Working groups?}\tb{working groups} that follow up on this workshop and address RDF constraint formulation and validation, are established in 2014: 
 the W3C RDF Data Shapes WG\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles WG\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
 
-Bosch and Eckert \cite{BoschEckert2014} initiated a database on RDF validation requirements to collect case studies, use cases and especially requirements regarding RDF validation collaboratively and in a comprehensive and structured way. \er{Just for reminding ourselves:  being careful using what is a use-case and what is a case-study later in the text.(http://www.w3.org/2001/sw/sweo/public/UseCases/)}
+Bosch and Eckert \cite{BoschEckert2014} initiated a database on RDF validation requirements to collect case studies, use cases and especially requirements regarding RDF validation collaboratively and in a comprehensive and structured way. 
+%\er{Just for reminding ourselves:  being careful using what is a use-case and what is a case-study later in the text.(http://www.w3.org/2001/sw/sweo/public/UseCases/)}
+%\tb{agreed, will take care}
 This database is continuously updated and openly available at \url{http://purl.org/net/rdf-validation}. It is used to evaluate and compare several existing solutions for RDF constraint formulation and validation. 
 The requirements are classified to provide a high-level view on different solutions and to facilitate a better understanding of the problem domain \cite{BoschEckert2014}.  
 
 There are multiple constraint languages having different syntaxes and semantics which can be used to express RDF constraints e.g., \emph{at-least} restrictions.
 The most promising constraint languages are \er{Promising on what? Or popular or common? This should be underlined. No aim yet  except expressing things has been mentioned .}
+\tb{promising to be possible standard constraint languages / candidates as standard constraint languages}
 the SPARQL Inferencing Notation (SPIN)\footnote{\url{http://spinrdf.org/}}, 
 the Web Ontology Language (OWL 2)\footnote{\url{http://www.w3.org/TR/owl2-syntax/}}, 
 Shape Expressions (ShEx)\footnote{\url{http://www.w3.org/Submission/shex-primer/}}, 
