--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -926,6 +926,13 @@ In description logics, reasoning tasks like query answering or detection of inco
 
 \section{Conclusion and Future Work}
 
+\tb{comment of Erman: there is also OWL 2 Full, which is not a DL at
+all because its too expressive (therefore has the highest complexity
+class: undecidable), but it HAS reasoning.  We do not mention it all.
+Perhaps, we might at least mention it in a sentence that we will not
+take it into our evaluation because it is this and this, impractical and
+so on.}
+
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
 \setcounter{tocdepth}{1}
